// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basic Custom Filtering 1`] = `
<div
  className="NiceTableRoot tableRoot-0-2-1 tableRoot-d6-0-2-23"
>
  <div
    className="NiceTable-Filter"
  >
    <div>
      <label>
        Name: 
      </label>
      <input
        className="demo-control"
        onChange={[Function]}
        type="text"
      />
      <label>
        Age (&gt;=): 
      </label>
      <input
        className="demo-control"
        onChange={[Function]}
        type="number"
      />
    </div>
  </div>
  <div
    className="NiceTableContainer tableContainer-0-2-2 tableContainer-d7-0-2-24"
  >
    <table>
      <thead>
        <tr>
          <th
            className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d13-0-2-25"
          >
            Id
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d14-0-2-26"
          >
            Name
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d15-0-2-27"
          >
            Email
          </th>
          <th
            className="NiceTableCell-alignRight headcell-0-2-5 headcell-d16-0-2-28"
          >
            Age
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colSpan={4}
            style={
              Object {
                "border": 0,
                "textAlign": "center",
              }
            }
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="NiceTable-Footer"
  >
    <div
      className="NiceTable-Pagination"
    >
      <select
        className="NiceTable-Pagination-Select"
        onChange={[Function]}
        value={10}
      >
        <option
          value={10}
        >
          10
           rows
        </option>
        <option
          value={25}
        >
          25
           rows
        </option>
        <option
          value={50}
        >
          50
           rows
        </option>
      </select>
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            first_page
          </i>
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            chevron_left
          </i>
        </div>
        <div
          className="NiceTable-Pagination-CurrentPage"
        >
          1
          -
          0
           of 
          0
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            chevron_right
          </i>
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            last_page
          </i>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basic Custom Rendering 1`] = `
<div
  className="NiceTableRoot tableRoot-0-2-1 tableRoot-d2-0-2-10"
>
  <div
    className="NiceTable-Filter"
  />
  <div
    className="NiceTableContainer tableContainer-0-2-2 tableContainer-d3-0-2-11"
  >
    <table>
      <thead>
        <tr>
          <th
            className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d4-0-2-12"
          >
            Id
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d5-0-2-13"
          >
            Avatar
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d6-0-2-14"
          >
            Name
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d7-0-2-15"
          >
            Email
          </th>
          <th
            className="NiceTableCell-alignRight headcell-0-2-5 headcell-d8-0-2-16"
          >
            Age
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colSpan={5}
            style={
              Object {
                "border": 0,
                "textAlign": "center",
              }
            }
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Basic Default 1`] = `
<div
  className="NiceTableRoot tableRoot-0-2-1 tableRoot-d0-0-2-3"
>
  <div
    className="NiceTable-Filter"
  />
  <div
    className="NiceTableContainer tableContainer-0-2-2 tableContainer-d1-0-2-4"
  >
    <table>
      <thead>
        <tr>
          <th
            className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d0-0-2-6"
          >
            Id
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d1-0-2-7"
          >
            Name
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d2-0-2-8"
          >
            Email
          </th>
          <th
            className="NiceTableCell-alignRight headcell-0-2-5 headcell-d3-0-2-9"
          >
            Age
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colSpan={4}
            style={
              Object {
                "border": 0,
                "textAlign": "center",
              }
            }
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Basic Large Data Set 1`] = `
Array [
  <button
    onClick={[Function]}
  >
    Clear Data
  </button>,
  <button
    onClick={[Function]}
    style={
      Object {
        "margin": "0 10px",
      }
    }
  >
    Add 1000 rows
  </button>,
  <span>
    Total rows = 
    0
  </span>,
  <div
    className="NiceTableRoot tableRoot-0-2-1 tableRoot-d12-0-2-41"
  >
    <div
      className="NiceTable-Filter"
    />
    <div
      className="NiceTableContainer tableContainer-0-2-2 tableContainer-d13-0-2-42"
    >
      <table>
        <thead>
          <tr>
            <th
              className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d25-0-2-43"
            >
              <span
                className="NiceTableSortLabel"
                onClick={[Function]}
              >
                <i
                  className="material-icons"
                />
                Id
              </span>
            </th>
            <th
              className="undefined headcell-0-2-5 headcell-d26-0-2-44"
            >
              <span
                className="NiceTableSortLabel"
                onClick={[Function]}
              >
                <i
                  className="material-icons"
                />
                Name
              </span>
            </th>
            <th
              className="undefined headcell-0-2-5 headcell-d27-0-2-45"
            >
              <span
                className="NiceTableSortLabel"
                onClick={[Function]}
              >
                <i
                  className="material-icons"
                />
                Email
              </span>
            </th>
            <th
              className="NiceTableCell-alignRight headcell-0-2-5 headcell-d28-0-2-46"
            >
              <span
                className="NiceTableSortLabel"
                onClick={[Function]}
              >
                <i
                  className="material-icons"
                />
                Age
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colSpan={4}
              style={
                Object {
                  "border": 0,
                  "textAlign": "center",
                }
              }
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
]
`;

exports[`Storyshots Basic Pagination 1`] = `
<div
  className="NiceTableRoot tableRoot-0-2-1 tableRoot-d4-0-2-17"
>
  <div
    className="NiceTable-Filter"
  />
  <div
    className="NiceTableContainer tableContainer-0-2-2 tableContainer-d5-0-2-18"
  >
    <table>
      <thead>
        <tr>
          <th
            className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d9-0-2-19"
          >
            Id
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d10-0-2-20"
          >
            Name
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d11-0-2-21"
          >
            Email
          </th>
          <th
            className="NiceTableCell-alignRight headcell-0-2-5 headcell-d12-0-2-22"
          >
            Age
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colSpan={4}
            style={
              Object {
                "border": 0,
                "textAlign": "center",
              }
            }
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="NiceTable-Footer"
  >
    <div
      className="NiceTable-Pagination"
    >
      <select
        className="NiceTable-Pagination-Select"
        onChange={[Function]}
        value={10}
      >
        <option
          value={10}
        >
          10
           rows
        </option>
        <option
          value={25}
        >
          25
           rows
        </option>
        <option
          value={50}
        >
          50
           rows
        </option>
      </select>
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            first_page
          </i>
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            chevron_left
          </i>
        </div>
        <div
          className="NiceTable-Pagination-CurrentPage"
        >
          1
          -
          0
           of 
          0
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            chevron_right
          </i>
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            last_page
          </i>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basic Remote Data Loading 1`] = `
Array [
  <div
    className="NiceTableRoot tableRoot-0-2-1 tableRoot-d10-0-2-35"
  >
    <div
      className="NiceTable-Filter"
    >
      <div>
        <label>
          Name: 
        </label>
        <input
          className="demo-control"
          onChange={[Function]}
          type="text"
        />
        <label>
          Age (&gt;=): 
        </label>
        <input
          className="demo-control"
          onChange={[Function]}
          type="number"
        />
      </div>
    </div>
    <div
      className="NiceTableContainer tableContainer-0-2-2 tableContainer-d11-0-2-36"
    >
      <table>
        <thead>
          <tr>
            <td
              className="NiceTableCell-Checkbox NiceTableCell-noPadding NiceTableCell-alignCenter"
              style={
                Object {
                  "width": "35px",
                }
              }
            />
            <th
              className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d21-0-2-37"
            >
              <span
                className="NiceTableSortLabel"
                onClick={[Function]}
              >
                <i
                  className="material-icons"
                >
                  arrow_upward
                </i>
                Id
              </span>
            </th>
            <th
              className="undefined headcell-0-2-5 headcell-d22-0-2-38"
            >
              <span
                className="NiceTableSortLabel"
                onClick={[Function]}
              >
                <i
                  className="material-icons"
                />
                Name
              </span>
            </th>
            <th
              className="undefined headcell-0-2-5 headcell-d23-0-2-39"
            >
              <span
                className="NiceTableSortLabel"
                onClick={[Function]}
              >
                <i
                  className="material-icons"
                />
                Email
              </span>
            </th>
            <th
              className="NiceTableCell-alignRight headcell-0-2-5 headcell-d24-0-2-40"
            >
              <span
                className="NiceTableSortLabel"
                onClick={[Function]}
              >
                <i
                  className="material-icons"
                />
                Age
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colSpan={4}
              style={
                Object {
                  "border": 0,
                  "textAlign": "center",
                }
              }
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="NiceTable-Footer"
    >
      <div
        className="NiceTable-Pagination"
      >
        <select
          className="NiceTable-Pagination-Select"
          onChange={[Function]}
          value={10}
        >
          <option
            value={10}
          >
            10
             rows
          </option>
          <option
            value={25}
          >
            25
             rows
          </option>
          <option
            value={50}
          >
            50
             rows
          </option>
        </select>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              first_page
            </i>
          </div>
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              chevron_left
            </i>
          </div>
          <div
            className="NiceTable-Pagination-CurrentPage"
          >
            1
            -
            0
             of 
            0
          </div>
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              chevron_right
            </i>
          </div>
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              last_page
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div>
    Selected Ids: [
    <span />
    ]
  </div>,
]
`;

exports[`Storyshots Basic Sorting 1`] = `
<div
  className="NiceTableRoot tableRoot-0-2-1 tableRoot-d8-0-2-29"
>
  <div
    className="NiceTable-Filter"
  />
  <div
    className="NiceTableContainer tableContainer-0-2-2 tableContainer-d9-0-2-30"
  >
    <table>
      <thead>
        <tr>
          <th
            className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d17-0-2-31"
          >
            <span
              className="NiceTableSortLabel"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              >
                arrow_upward
              </i>
              Id
            </span>
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d18-0-2-32"
          >
            <span
              className="NiceTableSortLabel"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              />
              Name
            </span>
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d19-0-2-33"
          >
            <span
              className="NiceTableSortLabel"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              />
              Email
            </span>
          </th>
          <th
            className="NiceTableCell-alignRight headcell-0-2-5 headcell-d20-0-2-34"
          >
            <span
              className="NiceTableSortLabel"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              />
              Age
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colSpan={4}
            style={
              Object {
                "border": 0,
                "textAlign": "center",
              }
            }
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="NiceTable-Footer"
  >
    <div
      className="NiceTable-Pagination"
    >
      <select
        className="NiceTable-Pagination-Select"
        onChange={[Function]}
        value={10}
      >
        <option
          value={10}
        >
          10
           rows
        </option>
        <option
          value={25}
        >
          25
           rows
        </option>
        <option
          value={50}
        >
          50
           rows
        </option>
      </select>
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            first_page
          </i>
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            chevron_left
          </i>
        </div>
        <div
          className="NiceTable-Pagination-CurrentPage"
        >
          1
          -
          0
           of 
          0
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            chevron_right
          </i>
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            last_page
          </i>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Export Basic 1`] = `
<div
  className="NiceTableRoot tableRoot-0-2-1 tableRoot-d14-0-2-47"
>
  <div
    className="NiceTable-Filter"
  />
  <div
    className="NiceTableContainer tableContainer-0-2-2 tableContainer-d15-0-2-48"
  >
    <table>
      <thead>
        <tr>
          <th
            className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d29-0-2-49"
          >
            Id
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d30-0-2-50"
          >
            Name
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d31-0-2-51"
          >
            Email
          </th>
          <th
            className="NiceTableCell-alignRight headcell-0-2-5 headcell-d32-0-2-52"
          >
            Age
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colSpan={4}
            style={
              Object {
                "border": 0,
                "textAlign": "center",
              }
            }
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="NiceTable-Footer"
  >
    <div
      className="NiceTable-FooterToolbar"
    >
      <div
        className="NiceTable-Button"
        onClick={[Function]}
        title="CSV"
      >
        <i
          className="material-icons"
        >
          save
        </i>
        <div
          className="NiceTable-Button-Label"
        >
          CSV
        </div>
      </div>
    </div>
    <div
      className="NiceTable-Pagination"
    >
      <select
        className="NiceTable-Pagination-Select"
        onChange={[Function]}
        value={10}
      >
        <option
          value={10}
        >
          10
           rows
        </option>
        <option
          value={25}
        >
          25
           rows
        </option>
        <option
          value={50}
        >
          50
           rows
        </option>
      </select>
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            first_page
          </i>
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            chevron_left
          </i>
        </div>
        <div
          className="NiceTable-Pagination-CurrentPage"
        >
          1
          -
          0
           of 
          0
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            chevron_right
          </i>
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            last_page
          </i>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Export Exporting With Filters 1`] = `
<div
  className="NiceTableRoot tableRoot-0-2-1 tableRoot-d18-0-2-59"
>
  <div
    className="NiceTable-Filter"
  >
    <div>
      <label>
        Name: 
      </label>
      <input
        className="demo-control"
        onChange={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="NiceTableContainer tableContainer-0-2-2 tableContainer-d19-0-2-60"
  >
    <table>
      <thead>
        <tr>
          <th
            className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d37-0-2-61"
          >
            <span
              className="NiceTableSortLabel"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              />
              Id
            </span>
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d38-0-2-62"
          >
            <span
              className="NiceTableSortLabel"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              />
              Name
            </span>
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d39-0-2-63"
          >
            <span
              className="NiceTableSortLabel"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              />
              Email
            </span>
          </th>
          <th
            className="NiceTableCell-alignRight headcell-0-2-5 headcell-d40-0-2-64"
          >
            <span
              className="NiceTableSortLabel"
              onClick={[Function]}
            >
              <i
                className="material-icons"
              />
              Age
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colSpan={4}
            style={
              Object {
                "border": 0,
                "textAlign": "center",
              }
            }
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="NiceTable-Footer"
  >
    <div
      className="NiceTable-FooterToolbar"
    >
      <div
        className="NiceTable-Button"
        onClick={[Function]}
        title="Export CSV"
      >
        <i
          className="material-icons"
        >
          save
        </i>
        <div
          className="NiceTable-Button-Label"
        >
          Export CSV
        </div>
      </div>
    </div>
    <div
      className="NiceTable-Pagination"
    >
      <select
        className="NiceTable-Pagination-Select"
        onChange={[Function]}
        value={10}
      >
        <option
          value={10}
        >
          10
           rows
        </option>
        <option
          value={25}
        >
          25
           rows
        </option>
        <option
          value={50}
        >
          50
           rows
        </option>
      </select>
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            first_page
          </i>
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            chevron_left
          </i>
        </div>
        <div
          className="NiceTable-Pagination-CurrentPage"
        >
          1
          -
          0
           of 
          0
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            chevron_right
          </i>
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            last_page
          </i>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Export Multi Export Buttons 1`] = `
<div
  className="NiceTableRoot tableRoot-0-2-1 tableRoot-d16-0-2-53"
>
  <div
    className="NiceTable-Filter"
  />
  <div
    className="NiceTableContainer tableContainer-0-2-2 tableContainer-d17-0-2-54"
  >
    <table>
      <thead>
        <tr>
          <th
            className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d33-0-2-55"
          >
            Id
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d34-0-2-56"
          >
            Name
          </th>
          <th
            className="undefined headcell-0-2-5 headcell-d35-0-2-57"
          >
            Email
          </th>
          <th
            className="NiceTableCell-alignRight headcell-0-2-5 headcell-d36-0-2-58"
          >
            Age
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colSpan={4}
            style={
              Object {
                "border": 0,
                "textAlign": "center",
              }
            }
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="NiceTable-Footer"
  >
    <div
      className="NiceTable-FooterToolbar"
    >
      <div
        className="NiceTable-Button"
        onClick={[Function]}
        title="CSV"
      >
        <i
          className="material-icons"
        >
          save
        </i>
        <div
          className="NiceTable-Button-Label"
        >
          CSV
        </div>
      </div>
      <div
        className="NiceTable-Button"
        onClick={[Function]}
        title=""
      >
        <i
          className="material-icons"
        >
          picture_as_pdf
        </i>
        <div
          className="NiceTable-Button-Label"
        >
          
        </div>
      </div>
      <div
        className="NiceTable-Button"
        onClick={[Function]}
        title="Excel"
      >
        <i
          className="material-icons"
        >
          save_alt
        </i>
        <div
          className="NiceTable-Button-Label"
        >
          Excel
        </div>
      </div>
    </div>
    <div
      className="NiceTable-Pagination"
    >
      <select
        className="NiceTable-Pagination-Select"
        onChange={[Function]}
        value={10}
      >
        <option
          value={10}
        >
          10
           rows
        </option>
        <option
          value={25}
        >
          25
           rows
        </option>
        <option
          value={50}
        >
          50
           rows
        </option>
      </select>
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            first_page
          </i>
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            chevron_left
          </i>
        </div>
        <div
          className="NiceTable-Pagination-CurrentPage"
        >
          1
          -
          0
           of 
          0
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            chevron_right
          </i>
        </div>
        <div
          className="NiceTable-Button NiceTable-Button-Icon disabled"
          onClick={[Function]}
          style={
            Object {
              "color": "",
            }
          }
        >
          <i
            className="material-icons"
          >
            last_page
          </i>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Selection Basic 1`] = `
Array [
  <div>
    A limitation: In remote data mode, checkbox will not appear in header row.
  </div>,
  <div>
    The data must have the 'id' property. You can change it with the prop 'dataIdField'
  </div>,
  <div
    className="NiceTableRoot tableRoot-0-2-1 tableRoot-d20-0-2-65"
  >
    <div
      className="NiceTable-Filter"
    />
    <div
      className="NiceTableContainer tableContainer-0-2-2 tableContainer-d21-0-2-66"
    >
      <table>
        <thead>
          <tr>
            <td
              className="NiceTableCell-Checkbox NiceTableCell-noPadding NiceTableCell-alignCenter"
              style={
                Object {
                  "width": "35px",
                }
              }
            >
              <div
                className="NiceTable-Button NiceTable-Button-Icon "
                onClick={[Function]}
                style={
                  Object {
                    "color": undefined,
                  }
                }
              >
                <i
                  className="material-icons"
                >
                  check_box_outline_blank
                </i>
              </div>
            </td>
            <th
              className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d41-0-2-67"
            >
              Id
            </th>
            <th
              className="undefined headcell-0-2-5 headcell-d42-0-2-68"
            >
              Name
            </th>
            <th
              className="undefined headcell-0-2-5 headcell-d43-0-2-69"
            >
              Email
            </th>
            <th
              className="NiceTableCell-alignRight headcell-0-2-5 headcell-d44-0-2-70"
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colSpan={4}
              style={
                Object {
                  "border": 0,
                  "textAlign": "center",
                }
              }
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="NiceTable-Footer"
    >
      <div
        className="NiceTable-Pagination"
      >
        <select
          className="NiceTable-Pagination-Select"
          onChange={[Function]}
          value={10}
        >
          <option
            value={10}
          >
            10
             rows
          </option>
          <option
            value={25}
          >
            25
             rows
          </option>
          <option
            value={50}
          >
            50
             rows
          </option>
        </select>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              first_page
            </i>
          </div>
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              chevron_left
            </i>
          </div>
          <div
            className="NiceTable-Pagination-CurrentPage"
          >
            1
            -
            0
             of 
            0
          </div>
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              chevron_right
            </i>
          </div>
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              last_page
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div>
    Selected Ids: [
    
    ]
  </div>,
]
`;

exports[`Storyshots Selection Default Selected Rows 1`] = `
Array [
  <div
    className="NiceTableRoot tableRoot-0-2-1 tableRoot-d22-0-2-71"
  >
    <div
      className="NiceTable-Filter"
    />
    <div
      className="NiceTableContainer tableContainer-0-2-2 tableContainer-d23-0-2-72"
    >
      <table>
        <thead>
          <tr>
            <td
              className="NiceTableCell-Checkbox NiceTableCell-noPadding NiceTableCell-alignCenter"
              style={
                Object {
                  "width": "35px",
                }
              }
            >
              <div
                className="NiceTable-Button NiceTable-Button-Icon "
                onClick={[Function]}
                style={
                  Object {
                    "color": undefined,
                  }
                }
              >
                <i
                  className="material-icons"
                >
                  check_box_outline_blank
                </i>
              </div>
            </td>
            <th
              className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d45-0-2-73"
            >
              Id
            </th>
            <th
              className="undefined headcell-0-2-5 headcell-d46-0-2-74"
            >
              Name
            </th>
            <th
              className="undefined headcell-0-2-5 headcell-d47-0-2-75"
            >
              Email
            </th>
            <th
              className="NiceTableCell-alignRight headcell-0-2-5 headcell-d48-0-2-76"
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colSpan={4}
              style={
                Object {
                  "border": 0,
                  "textAlign": "center",
                }
              }
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="NiceTable-Footer"
    >
      <div
        className="NiceTable-Pagination"
      >
        <select
          className="NiceTable-Pagination-Select"
          onChange={[Function]}
          value={10}
        >
          <option
            value={10}
          >
            10
             rows
          </option>
          <option
            value={25}
          >
            25
             rows
          </option>
          <option
            value={50}
          >
            50
             rows
          </option>
        </select>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              first_page
            </i>
          </div>
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              chevron_left
            </i>
          </div>
          <div
            className="NiceTable-Pagination-CurrentPage"
          >
            1
            -
            0
             of 
            0
          </div>
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              chevron_right
            </i>
          </div>
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              last_page
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div>
    Selected Ids: [
    1,4,5,6,20,21
    ]
  </div>,
]
`;

exports[`Storyshots Selection Full Row Selectable 1`] = `
Array [
  <div
    className="NiceTableRoot tableRoot-0-2-1 tableRoot-d24-0-2-77"
  >
    <div
      className="NiceTable-Filter"
    />
    <div
      className="NiceTableContainer tableContainer-0-2-2 tableContainer-d25-0-2-78"
    >
      <table>
        <thead>
          <tr>
            <td
              className="NiceTableCell-Checkbox NiceTableCell-noPadding NiceTableCell-alignCenter"
              style={
                Object {
                  "width": "35px",
                }
              }
            >
              <div
                className="NiceTable-Button NiceTable-Button-Icon "
                onClick={[Function]}
                style={
                  Object {
                    "color": undefined,
                  }
                }
              >
                <i
                  className="material-icons"
                >
                  check_box_outline_blank
                </i>
              </div>
            </td>
            <th
              className="NiceTableCell-alignCenter headcell-0-2-5 headcell-d49-0-2-79"
            >
              Id
            </th>
            <th
              className="undefined headcell-0-2-5 headcell-d50-0-2-80"
            >
              Name
            </th>
            <th
              className="undefined headcell-0-2-5 headcell-d51-0-2-81"
            >
              Email
            </th>
            <th
              className="NiceTableCell-alignRight headcell-0-2-5 headcell-d52-0-2-82"
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colSpan={4}
              style={
                Object {
                  "border": 0,
                  "textAlign": "center",
                }
              }
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="NiceTable-Footer"
    >
      <div
        className="NiceTable-Pagination"
      >
        <select
          className="NiceTable-Pagination-Select"
          onChange={[Function]}
          value={10}
        >
          <option
            value={10}
          >
            10
             rows
          </option>
          <option
            value={25}
          >
            25
             rows
          </option>
          <option
            value={50}
          >
            50
             rows
          </option>
        </select>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              first_page
            </i>
          </div>
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              chevron_left
            </i>
          </div>
          <div
            className="NiceTable-Pagination-CurrentPage"
          >
            1
            -
            0
             of 
            0
          </div>
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              chevron_right
            </i>
          </div>
          <div
            className="NiceTable-Button NiceTable-Button-Icon disabled"
            onClick={[Function]}
            style={
              Object {
                "color": "",
              }
            }
          >
            <i
              className="material-icons"
            >
              last_page
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div>
    Selected Ids: [
    
    ]
  </div>,
]
`;
